--- a/01-Bgvideo/index.html
+++ b/01-Bgvideo/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Assets/camera-7903435_1280.jpg" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="Assets/camera-7903435_1280.jpg"
+      type="image/x-icon"
+    />
     <title>Background Video</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="hero">
+      <div class="section">
+        <div class="bgvideo">
+          <video
+            src="Assets/river_-_105584 (1080p).mp4"
+            autoplay
+            muted
+            loop
+          ></video>
+          <div class="content">
+            <h1>River</h1>
+            <a href="">Watch it</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
