--- a/02-Layout/index.html
+++ b/02-Layout/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div class="main">
       <div class="left">
         <div class="lnav">
-          <div class="lnavleft">back</div>
+          <div class="lnavleft"><i class="fa-solid fa-arrow-right"></i></div>
           <div class="lnavright">
-            <a href="">Home</a><a href="">About</a><a href=""></a>
+            <a href="">Home</a><a href="">About</a><a href=""><i class="fa-brands fa-x-twitter"></i></a>
           </div>
+        </div>
+        <div class="lcontent">
+            <h1>Hello,</h1>
+            <p>This is the most beautiful generated layout of mine. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, repellat?</p>
+            <a href="#">Read</a>
         </div>
       </div>
 
