--- a/Todo-App/index.html
+++ b/Todo-App/index.html
@@ -14,17 +14,16 @@
 
             <div class="row">
                 <input type="text" name="task_name" id="task_name" placeholder="Add your task" >
-                <button>Add</button>
+                <button onclick="addtask()" class="add">Add</button>
             </div>
 
-            <ul>
-                <li>Task 1</li>
-                <li>Task 2</li>
-                <li>Task 3</li> 
-                <li>Task 3</li>
+            <ul class="content">
+                
             </ul>
              
         </div>
     </div>
+
+    <script src="main.js"></script> 
 </body>
 </html>
